--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Reconciliacion</title>
-  <base href="/">
+  <title>Mapa sonoro</title>
+  <base href="/reconciliacion-deploy/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
@@ -21,8 +21,9 @@
   
 
   
-<link rel="stylesheet" href="styles.7715666532c7cdc8b57d.css"></head>
+<link rel="stylesheet" href="styles.15a1fa290e313fb7e7ee.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.91b7c8f8c5353fd80666.js" type="module"></script><script src="main-es5.91b7c8f8c5353fd80666.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.ab4c3be539f74916fc98.js" type="module"></script><script src="main-es5.ab4c3be539f74916fc98.js" nomodule defer></script></body>
+<script src="prueba.js"></script>
 </html>
